src/infrastructure/cloudformation/rds_deploy.yml

Parameters:
  DBNameParam: 
    Default: Pharmacy
    Type: String
    MinLength: 1
    AllowedPattern: "^[a-zA-Z][a-zA-Z0-9-]{0,58}[a-zA-Z0-9]$"
    Description: "The DB instance identifier is case-insensitive, but is stored as all lowercase (e.g pharmacy). 1 to 60 alphanumeric characters or hyphens. First character must be a letter. Can't contain two consecutive hyphens. Can't end with a hyphen."
  MUserParam:
    Default: postgres
    Type: String
    MinLength: 1
    AllowedPattern: "^[a-zA-Z][a-zA-Z0-9]{0,15}$"
    Description: "1 to 16 alphanumeric characters. The first character must be a letter."
  MUserPasswordParam:
    Type: String
    NoEcho: true
    MinLength: 8
    AllowedPattern: "[a-zA-Z0-9!#\\$%&()*+,-.:;<=>?\\[\\]^_`{|}~]*"
    Description: "At least 8 printable ASCII characters. Can't contain any of the following: / (slash), '(single quote), \"(double quote) and @ (at sign)."

Resources:
  DBInstanceVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: "default"
      Tags:
      - Key: "owner"
        Value: "anza@bbd.co.za"
      - Key: "created-using"
        Value: "cloudformation"

  DBInstanceSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DBInstanceVPC
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone: "eu-west-1a"
      Tags:
      - Key: "owner"
        Value: "anza@bbd.co.za"
      - Key: "created-using"
        Value: "cloudformation"
  
  DBInstanceSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DBInstanceVPC
      CidrBlock: "10.0.2.0/24"
      AvailabilityZone: "eu-west-1b"
      Tags:
      - Key: "owner"
        Value: "anza@bbd.co.za"
      - Key: "created-using"
        Value: "cloudformation"
  
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: "owner"
        Value: "anza@bbd.co.za"
      - Key: "created-using"
        Value: "cloudformation"

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref DBInstanceVPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DBInstanceVPC

  PublicSubnetRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  PublicSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBInstanceSubnet
      RouteTableId: !Ref PublicRouteTable

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: "DBInstanceSubnetGroup"
      DBSubnetGroupDescription: "Subnet group for RDS instance"
      SubnetIds:
        - !Ref DBInstanceSubnet
        - !Ref DBInstanceSubnet2

  DBInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for RDS instance"
      VpcId: !Ref DBInstanceVPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "5432"
          ToPort: "5432"
          CidrIp: "0.0.0.0/0"
      Tags:
      - Key: "owner"
        Value: "anza@bbd.co.za"
      - Key: "created-using"
        Value: "cloudformation"

  PostgresDBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: !Ref DBNameParam
      MasterUsername: !Ref MUserParam
      MasterUserPassword: !Ref MUserPasswordParam
      Engine: postgres
      LicenseModel: postgresql-license
      EngineVersion: 16.1
      DBInstanceClass: db.t3.micro
      VPCSecurityGroups: 
        - !GetAtt DBInstanceSecurityGroup.GroupId
      DBSubnetGroupName: !Ref DBSubnetGroup
      StorageType: gp2
      PubliclyAccessible: true
      AllocatedStorage: 20
      BackupRetentionPeriod: 0
      DeletionPolicy: Delete
      DBInstanceIdentifier: !Join ["-in-", ["DatabaseLevelUp-Postgres-Instance", !Ref "AWS::Region"]]
      MultiAZ: False
      Tags: 
      - Key: "owner"
        Value: "anza@bbd.co.za"
      - Key: "created-using"
        Value: "cloudformation"
